[minor] Chrome styles fixed

--- a/src/views/index.scss
+++ b/src/views/index.scss
@@ -46,7 +46,9 @@ select {
   color: white;
 }
 
-/* Scrollbar */
+/**************************
+* Scrollbar
+**************************/
 
 :root {
   scrollbar-color: #888 #f1f1f1 !important;
@@ -71,4 +73,25 @@ select {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+/**************************
+* Fonts
+**************************/
+
+@font-face {
+  font-family: RobotoRegular;
+  src: url(./assets/fonts/Roboto/Roboto-Regular.ttf);
+}
+@font-face {
+  font-family: RobotoHeavy;
+  src: url(./assets/fonts/Roboto/Roboto-Bold.ttf);
+}
+
+.roboto-regular {
+  font-family: RobotoRegular;
+}
+
+.roboto-bold {
+  font-family: RobotoHeavy;
 }
