[feature] Added About Page

--- a/src/views/index.scss
+++ b/src/views/index.scss
@@ -37,6 +37,10 @@ select {
   height: 50px;
 }
 
+.href-no-underline {
+  text-decoration: unset;
+}
+
 .button-href {
   text-decoration: unset;
   color: white;
